# AI-Agent-Trading

./: .coverage  .env.development  .env.native.template  .env.production  .gitignore  .pre-commit-config.yaml  .secrets.enc  AI_AGENT_EXPLANATION.md  AI_CONFIG_GUIDE.md  API_KEYS_SETUP_GUIDE.md  API_SERVICE_IMPLEMENTATION.md  CHANGELOG-NATIVE-DEPLOYMENT.md  CODEBASE_OPTIMIZATION_REPORT.md  COMPLETE_SOLUTION_SUMMARY.md  Cargo.toml  DATABASE-SETUP-GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.execution-gateway  Dockerfile.monitoring  Dockerfile.orchestrator  EARTH_TONE_COLOR_REFERENCE.md  EARTH_TONE_DASHBOARD_PREVIEW.md  EXCELLENT_PERFORMANCE_SUMMARY.md  FINAL_AI_SOLUTION.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_GRADE_A_PLUS_ACHIEVEMENT.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_TEST_REPORT.md  GETTING-STARTED.md  IMMEDIATE_SOLUTION.md  LAUNCH.bat  LAUNCH_DASHBOARD.bat  LAUNCH_DOCKER_DASHBOARD.bat  LAUNCH_TRADINGVIEW_DASHBOARD.bat  LOCAL_DEVELOPMENT.md  Makefile  (+92 more)
.github/workflows/: ci.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook  source-to-docs-sync.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
PRODUCTION_TRADING/: start_live_trading.py
ai-trading-working/api/: index.py
api/: index.py  index_improved.py  index_simple.py  requirements.txt
api-new/: index.py
api/functions/: cron_market_analysis.py  cron_strategy_update.py  cron_training.py  health.py  market.py  strategies.py  trading.py  training.py
api/trading/: index.py
apps/: .gitkeep
apps/execution-gateway/: Cargo.toml  integration_test.py  test_validation.py
apps/execution-gateway/src/: api.rs  circuit_breaker.rs  exchange_adapter.rs  gateway.rs  lib.rs  main.rs  order_manager.rs  retry_logic.rs
apps/trading-api/: Dockerfile  Dockerfile.dev  PERSISTENCE_README.md  (+9 more)
auto_trading_system/: README.md  start_automated_trading.py  start_simple_demo.py  start_working_demo.py
comprehensive_test_results/: test_results_20251028_145317.json  test_summary.csv
comprehensive_test_suite/: run_complete_tests.py  run_comprehensive_tests.py  run_simple_tests.py
config/: postgres-native.conf  redis-native.conf  services.json
grade_a_optimization/: achieve_grade_a_plus.py  demonstrate_grade_a_plus.py  final_grade_a_plus.py  grade_a_plus_results.json
infra/: .gitkeep
libs/: .gitkeep  __init__.py
libs/rust-common/: Cargo.toml
libs/rust-common/src/: errors.rs  lib.rs  types.rs
libs/rust-common/src/trading_models/: enums.rs  market_data.rs  mod.rs  orders.rs  patterns.rs  signals.rs  tests.rs
monitoring/: prometheus.yml
monitoring_config/: alert_rules.yml  system_performance.json  trading_performance.json
nginx/: nginx.conf
ops/: .gitkeep
optimization_report/: .env.template  COMPREHENSIVE_OPTIMIZATION_REPORT.md  critical_fixes.py  logging_guidelines.md
optimization_success/: OPTIMIZATION_SUCCESS_REPORT.md
scripts/: Backup-TradingDatabase.ps1  Build-ExecutionGateway.ps1  Create-DatabaseTables.ps1  ProcessManager.psm1  Quick-Start.ps1  Reset-PostgreSQL-Password.ps1  Reset-TradingDatabase.ps1  Restart-TradingService.ps1  Restore-TradingDatabase.ps1  Setup-Database.ps1  Setup-NativeDevelopment.ps1  Setup-NativeProduction.ps1  Test-DatabaseConnection.ps1  Test-NativeDeployment.ps1  Test-TradingSystemHealth.ps1  Update-TradingDatabase.ps1  comprehensive_optimization.py  deploy-development.ps1  deploy-production.ps1  deploy-vercel.sh  fix_datetime_utcnow.py  fix_test_datetime.py  get-trading-logs.ps1  get-trading-status.ps1  health-check-dashboard.sh  health-check.sh  init-database.ps1  install-deps.ps1  install-deps.sh  install-native-services.ps1  smoke-tests.sh  start-trading-system.ps1  start_system.bat  stop-trading-system.ps1  test_api_keys.py  validate-setup.ps1  validate_comprehensive_testing.py  validate_performance_thresholds.py  verify-dotenv-config.ps1  verify-rust-models.ps1
tests/: conftest.py  test_basic.py  test_chaos_testing.py  test_comprehensive_validation.py  test_confluence_scoring.py  test_database_integration.py  test_database_setup.py  test_database_setup_simple.py  test_deployment_manager.py  test_e2e_database_setup.py  test_e2e_integration.py  test_emergency_circuit_breaker.py  test_enhanced_signal_quality.py  test_error_handling.py  test_live_trading_config.py  test_live_trading_controller.py  test_llm_integration.py  test_load_testing.py  test_market_data_ingestion.py  test_market_data_integration.py  test_memory_learning.py  test_monitoring.py  test_orchestrator.py  test_pattern_recognition.py  test_persistence.py  test_risk_management.py  test_security.py  test_serialization_compatibility.py  test_technical_indicators.py  test_trading_models.py  test_watchdog.py
validation_results/: chaos_tests_20251204_033621.json  comprehensive_validation_result.json  performance_tests_20250828_065105.json  performance_tests_20250828_070723.json  performance_tests_20250917_050353.json  performance_tests_20250917_055251.json  performance_tests_20250917_063841.json  performance_tests_20250918_042946.json  performance_tests_20250918_045400.json  performance_tests_20250918_074331.json  performance_tests_20250918_075212.json  performance_tests_20250918_075721.json  performance_tests_20250918_081545.json  performance_tests_20250918_091959.json  performance_tests_20251028_045725.json  performance_tests_20251028_051452.json  performance_tests_20251028_061713.json  performance_tests_20251028_062701.json  performance_tests_20251028_071727.json  performance_tests_20251028_072640.json  performance_tests_20251203_081023.json  performance_tests_20251203_091004.json  performance_tests_20251203_092737.json  performance_tests_20251203_094551.json  performance_tests_20251204_020236.json  performance_tests_20251204_022323.json  performance_tests_20251204_025713.json  performance_tests_20251204_031635.json  performance_tests_20251204_032513.json  performance_tests_20251204_033621.json  performance_tests_20251204_035426.json  property_tests_20250918_075212.json  property_tests_20251028_051452.json
vercel-working/: vercel.json
(+285 files in other folders)
