[package]
name = "execution-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { workspace = true }
config = "0.11"
clap = { workspace = true }
rust-common = { path = "../../libs/rust-common" }
async-trait = "0.1"
rand = "0.8"
dotenvy = { workspace = true }  # For native deployment .env file support

# Web framework and HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
hyper = { version = "1.0", features = ["full"] }

# Performance and optimization
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.8"

# Database and caching
sqlx = { workspace = true }
redis = { workspace = true }

# Security and validation
validator = "0.16"
jsonwebtoken = "9.2"
argon2 = "0.5"
rand_core = "0.6"

# Monitoring and metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Serialization and compression
bincode = "1.3"
snap = "1.1"

# Error handling and logging
tracing-appender = "0.2"
tracing-error = "0.2"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints]
workspace = true