[package]
name = "rust-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0"
thiserror = "1.0"

# Performance and optimization
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.8"

# Serialization and compression
bincode = "1.3"
snap = "1.1"

# Validation and error handling
validator = "0.16"
tracing = "0.1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Collections and data structures
indexmap = "2.1"
smallvec = "1.11"

[lints]
workspace = true